Making all the images Local in Organizers

--- a/organizers.html
+++ b/organizers.html
@@ -203,7 +203,7 @@
                             <span class="designation">President, Manipal University <Jaipur></Jaipur></span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C4E03AQHCFvYlO5bu_Q/profile-displayphoto-shrink_200_200/0?e=1594252800&v=beta&t=4TFLslZDKxHoWoaNWSRIpRgvUjZRT-lOCWdhKAFXSp4" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="images/organizers/gkprabhu.jpg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -240,7 +240,7 @@
                             <span class="designation">Pro-Vice Chancellor, Manipal University Jaipur</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://jaipur.manipal.edu/content/dam/manipal/muj/images/profile/NN%20Sharma%20sir192X166.png" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="images/organizers/NN Sharma.png" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -258,7 +258,7 @@
                             <span class="designation">Manipal University Jaipur</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://jaipur.manipal.edu/content/dam/manipal/muj/images/profile/Dr%20Jagannath%20K.jpg" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="images/organizers/Dr%20Jagannath%20K.jpg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -279,7 +279,7 @@
                             <span class="designation">Manipal University Jaipur</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://jaipur.manipal.edu/content/dam/manipal/muj/images/profile/Ravi%20Shankar%20Kamath1.jpg" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="images/organizers/Ravi%20Shankar%20Kamath1.jpg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -315,7 +315,7 @@
                             <span class="designation">Iowa State University, USA</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C5603AQFXNe3lvSOgZg/profile-displayphoto-shrink_200_200/0?e=1594252800&v=beta&t=Qd8BFlMftWMBoWV-fUnsB3fGVyA4kBdAVqkCG5lsw0Y" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="images/organizers/arunsomani.jpg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -333,7 +333,7 @@
                             <span class="designation">Manipal University Jaipur</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://jaipur.manipal.edu/content/dam/manipal/muj/images/profile/Rajveer-Singh-New.png" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="images/organizers/Rajveer-Singh.png" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -371,7 +371,7 @@
                             <span class="designation">University of Technology Sydney Australia</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C5603AQH8qVnwffsHDA/profile-displayphoto-shrink_200_200/0?e=1594252800&v=beta&t=8Edt9mjbH9NIXZuWhQX-I998bimvIS1kbXZmgKZ8quw" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="images/organizers/pritadarsinanda.jpg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -389,7 +389,7 @@
                             <span class="designation">Deakin University Australia</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C4E03AQGWF0p6KYAtVg/profile-displayphoto-shrink_200_200/0?e=1594252800&v=beta&t=yQ-Q4H9DtcIcQbrK74nrKrf2p8P8nJbmghAR8kloKX4" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="images/organizers/robindoss.jpg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -407,7 +407,7 @@
                             <span class="designation">Manipal University Jaipur</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://jaipur.manipal.edu/content/dam/manipal/muj/images/profile/sumit-srivastava.jpg" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="images/organizers/sumit-srivastava.jpg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -425,7 +425,7 @@
                             <span class="designation">Manipal University Jaipur</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C4D03AQGS0JVLkH6ODg/profile-displayphoto-shrink_200_200/0?e=1594252800&v=beta&t=2qxQwRWbmnzJrdqjFVS6wJk2c9sSHXiLeuS6URMHb28" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="images/organizers/pankajvyas.jpg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -462,7 +462,7 @@
                             <span class="designation">Manipal University Jaipur</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C5103AQGawwH5UvSBzA/profile-displayphoto-shrink_200_200/0?e=1594252800&v=beta&t=wKOFSdvN8aePY-tbrEm6mFIZ3yOg23F2VONsMz0j4k8" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="images/organizers/vijaydhaka.jpg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -480,7 +480,7 @@
                             <span class="designation">MNIT Jaipur</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C5603AQHug7_fKXhtkA/profile-displayphoto-shrink_200_200/0?e=1594252800&v=beta&t=_CbUbJz1Hz-mIEhtxaMsHxKxpR5aD7jb1kkoLSSayic" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="images/organizers/arkamazumdar.jpg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -517,7 +517,7 @@
                             <span class="designation">Manipal University Jaipur</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C4E03AQEso2JWMIB-IQ/profile-displayphoto-shrink_200_200/0?e=1594252800&v=beta&t=82Dsf9XWed8sIcyOoxoTdepni-Ddnv_OdkA5ety5H3U" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="images/organizers/ankitmundra.jpg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -554,7 +554,7 @@
                             <span class="designation">Manipal University Jaipur</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://jaipur.manipal.edu/content/dam/manipal/muj/images/profile/Vivek%20Verma.jpg" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="images/organizers/Vivek%20Verma.jpg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -572,7 +572,7 @@
                             <span class="designation">Manipal University Jaipur</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://jaipur.manipal.edu/content/dam/manipal/muj/images/profile/rohit-gupta.jpg" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="images/organizers/rohit-gupta.jpg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -608,7 +608,7 @@
                             <span class="designation">Head of Department of Mechanical Engineering at South Valley University-Qena</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C4D03AQEirKqwO90j5w/profile-displayphoto-shrink_200_200/0?e=1594252800&v=beta&t=fLXHBQMfZRDGrKaeYdPMVwe1NZ-yv_7W9sFm4eu5lc8" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="images/organizers/noubyghazly.jpg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -617,7 +617,7 @@
                         </div>
                     </div>
                 </div>
-               
+
 
                 <!-- Speaker Block -->
                 <div class="speaker-block-two col-lg-6 col-md-6 col-sm-12 wow fadeInUp">
@@ -627,7 +627,7 @@
                             <span class="designation">Senior Lecturer, Computer Information Systems at University of Malta</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C4E03AQEKWJyGdBt4Cw/profile-displayphoto-shrink_200_200/0?e=1594252800&v=beta&t=wckMFFTrYbfsUaSLRH0J6OkyHxAEsNIBKsyihaDBSxI" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="images/organizers/lalitgarg.jpg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -643,7 +643,7 @@
                             <span class="designation">Assitant Professor,Manipal University Jaipur</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="images/speakers/manjit.jpeg" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="images/organizers/manjit.jpg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -659,7 +659,7 @@
                             <span class="designation">Associate Professor in the Systems Research Institute, Polish Academy of Sciences</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="images/speakers/poland.jpeg" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="images/organizers/poland.jpg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -696,7 +696,7 @@
                             <span class="designation">Manipal University Jaipur</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://jaipur.manipal.edu/content/dam/manipal/muj/images/profile/Dilbag%20Singh.jpg" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="images/organizers/Dilbag%20Singh.jpg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -736,7 +736,7 @@
                             <span class="designation">Accenture Innovations</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C5103AQEIbc_HBftVOQ/profile-displayphoto-shrink_200_200/0?e=1594252800&v=beta&t=w68q-PJ5kic3WjG_QLgqeRs68aNFkwpMag_fD0MxyDw" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="images/organizers/subhajitbhattacharya.jpg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -754,7 +754,7 @@
                             <span class="designation">Manipal University Jaipur</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C5103AQHTTmObtz00nw/profile-displayphoto-shrink_200_200/0?e=1594252800&v=beta&t=L8JaigB_AEpQSlR9ywo9hWU71vdTy0jrO76emhwEGDo" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="images/organizers/pradeeptiwari.jpg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -772,7 +772,7 @@
                             <span class="designation">Manipal University Jaipur</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C4D03AQHWJB6duhhCYQ/profile-displayphoto-shrink_200_200/0?e=1594252800&v=beta&t=7NTWc4ZqmN5ZNwrFoz-5DxK2SoLwdfIU2UqsBYXnJzE" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="images/organizers/punitgupta.jpg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -790,7 +790,7 @@
                             <span class="designation">Manipal University Jaipur</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C5603AQGvShMmflGdkQ/profile-displayphoto-shrink_200_200/0?e=1594252800&v=beta&t=6IDPK8zsjWhygu5c5sYjRKxQqNgeWGTuas16Y5d_cqc" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="images/organizers/sikhamundra.jpg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -808,7 +808,7 @@
                             <span class="designation">Manipal University Jaipur</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C4D03AQEl2JZ4bEciCw/profile-displayphoto-shrink_200_200/0?e=1594252800&v=beta&t=8lvjVpL8p4SGDV8VuJYEj82TbelDTRr5HqQCWIuMB8o" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="images/organizers/gauravagarwal.jpg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
