--- a/speakers.html
+++ b/speakers.html
@@ -207,7 +207,7 @@
                 <div class="speaker-block-three col-md-6 col-sm-12 wow fadeInUp">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="https://media-exp1.licdn.com/dms/image/C5103AQEIbc_HBftVOQ/profile-displayphoto-shrink_200_200/0?e=1586390400&v=beta&t=N6ep9zsPf2F3A2mpZHyhtI22SjzDCzqHJ1N5GS0WnJ0" alt=""></a></figure>
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/organizers/subhajitbhattacharya.jpg" alt=""></a></figure>
                         </div>
                         <div class="info-box">
                             <h4 class="name"><a href="speakers-detail.html">Subhajit Bhattacharya</a></h4>
