keynote speaker added

--- a/index.html
+++ b/index.html
@@ -501,6 +501,22 @@
                         </div>
                     </div>
                 </div>
+                <div class="speaker-block-three col-lg-3 col-md-6 col-sm-12 wow fadeInUp">
+                    <div class="heightfix inner-box">
+                        <div class="image-box">
+                            <figure class="image"><a target="_blank" href="https://www.linkedin.com/in/bhanwar-lal-bishnoi-blb-smieee-m-tech-mba-mle%E2%84%A0-fie-fiet-fiete-c-eng-30aa6717"><img src="images/speakers/key.jpeg" alt=""></a></figure>
+                        </div>
+                        <div class="info-box">
+                            <h4 class="name"><a target="_blank" href="https://www.linkedin.com/in/bhanwar-lal-bishnoi-blb-smieee-m-tech-mba-mle%E2%84%A0-fie-fiet-fiete-c-eng-30aa6717">Bhanwar Lal Bishnoi (BLB)</a></h4>
+                            <span class="designation">Head-Embedded R&D Center(EDDC)@L&T-Electrical|Ex-VP/GM-R&D@L+G|Ex-Global PgM-GE Energy|PRI-UK</span>
+                        </div>
+                        <div class="social-box">
+                            <ul class="social-links social-icon-colored">
+                                <li><a target="_blank" href="https://www.linkedin.com/in/bhanwar-lal-bishnoi-blb-smieee-m-tech-mba-mle%E2%84%A0-fie-fiet-fiete-c-eng-30aa6717"><i class="fab fa-linkedin-in"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
