--- a/speakers.html
+++ b/speakers.html
@@ -220,7 +220,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="speaker-block-three col-md-6 col-sm-12 wow fadeInUp">
+                <div class="speaker-block-three col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
                     <div class="inner-box">
                         <div class="image-box">
                             <figure class="image"><a href="speakers-detail.html"><img src="images/speakers/Priyadarsi-Nanda.jpg" alt=""></a></figure>
@@ -236,7 +236,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="speaker-block-three col-md-6 col-sm-12 wow fadeInUp">
+                <div class="speaker-block-three col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
                     <div class="heightfix inner-box">
                         <div class="image-box">
                             <figure class="image"><a target="_blank" href="http://www.iitb.ac.in/en/employee/prof-krithi-ramamritham"><img src="images/speakers/speaker4.jpeg" alt=""></a></figure>
@@ -248,6 +248,22 @@
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
                                 <li><a target="_blank" href="http://www.iitb.ac.in/en/employee/prof-krithi-ramamritham"><i class="fab fa-linkedin-in"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="speaker-block-three col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+                    <div class="heightfix inner-box">
+                        <div class="image-box">
+                            <figure class="image"><a target="_blank" href="https://www.linkedin.com/in/bhanwar-lal-bishnoi-blb-smieee-m-tech-mba-mle%E2%84%A0-fie-fiet-fiete-c-eng-30aa6717"><img src="images/speakers/key.jpeg" alt=""></a></figure>
+                        </div>
+                        <div class="info-box">
+                            <h4 class="name"><a target="_blank" href="https://www.linkedin.com/in/bhanwar-lal-bishnoi-blb-smieee-m-tech-mba-mle%E2%84%A0-fie-fiet-fiete-c-eng-30aa6717">Bhanwar Lal Bishnoi (BLB)</a></h4>
+                            <span class="designation">Head-Embedded R&D Center(EDDC)@L&T-Electrical|</span>
+                        </div>
+                        <div class="social-box">
+                            <ul class="social-links social-icon-colored">
+                                <li><a target="_blank" href="https://www.linkedin.com/in/bhanwar-lal-bishnoi-blb-smieee-m-tech-mba-mle%E2%84%A0-fie-fiet-fiete-c-eng-30aa6717"><i class="fab fa-linkedin-in"></i></a></li>
                             </ul>
                         </div>
                     </div>
