--- a/blog-grid.html
+++ b/blog-grid.html
@@ -35,11 +35,11 @@
     <span class="header-span"></span>
 
     <!-- Main Header-->
-    <header class="main-header header-style-two">
+    <header class="main-header header-style-two" style="background: #fff;">
         <div class="main-box">
             <div class="auto-container clearfix">
-                <div class="logo-box">
-                    <div class="logo"><a href="index.html"><img src="images/logo-2.png" alt="" title=""></a></div>
+                <div class="logo-box" id="logo">
+                    <div class="logo"><a href="index.html"><img src="images/logo_image.png" alt="" title=""></a></div>
                 </div>
 
                 <!--Nav Box-->
@@ -57,13 +57,15 @@
 
                         <div class="collapse navbar-collapse clearfix" id="navbarSupportedContent">
                             <ul class="navigation clearfix">
-                              
-                                <li class="dropdown"><a href="about-us.html">About</a>
+
+
+                                <li class="dropdown"><a href="ssic.html">About</a>
                                     <ul>
+                                        <li><a href="ssic.html">SSIC 2017</a></li>
+                                        <li><a href="ssic2019.html">SSIC 2019</a></li>
+                                        <li><a href="https://jaipur.manipal.edu/">About Manipal</a></li>
+                                        <li><a href="about-jaipur.html">About Jaipur</a></li>
                                         <li><a href="about-us.html">About Us</a></li>
-                                        <li><a href="pricing.html">Pricing</a></li>
-                                        <li><a href="faqs.html">FAQ's</a></li>
-                                        <li><a href="coming-soon.html">Coming Soon</a></li>
                                     </ul>
                                 </li>
                                 <li class="dropdown"><a href="papers.html">Call For</a>
@@ -74,28 +76,25 @@
                                         <li><a href="about-jaipur.html">Tutorial</a></li>
                                     </ul>
                                 </li>
-                                <li class="dropdown"><a href="speakers.html">Speakers</a>
+                                <li class="dropdown"><a href="organizers.html">Committees</a>
                                     <ul>
-                                        <li><a href="speakers.html">Speakers</a></li>
-                                        <li><a href="speakers-detail.html">Speakers Detail</a></li>
+                                        <li><a href="organizers.html">Organisers</a></li>
+                                        <li><a href="advisory.html">Advisory Committee</a></li>
+                                        <li><a href="tpc.html">Techincal Program Committee</a></li>
                                     </ul>
                                 </li>
-                                <li class="dropdown"><a href="schedule.html">Schedule</a>
-                                    <ul>
-                                        <li><a href="schedule.html">Schedule</a></li>
-                                        <li><a href="event-detail.html">Event Detail</a></li>
-                                        <li><a href="buy-ticket.html">Buy Ticket</a></li>
+                                <li ><a class="current" href="speakers.html">Speakers</a></li>
+                                <li class="dropdown"><a href="schedule.html">Author Info.</a>
+                                    <ul style="width: 300px;">
+                                        <li><a href="coming-soon.html">Registration</a></li>
+                                        <li><a href="guidelines.html">Author's Guidelines</a></li>
+                                        <li><a href="https://easychair.org/account/signin?l=3D11LA89AsL306UnmLGQUt#" target="_blank">Submit Manuscripts</a></li>
+                                        <li><a href="coming-soon.html">Banking</a></li>
+                                        <li><a href="coming-soon.html">Travel and Accommodation</a></li>
+                                        <li><a href="coming-soon.html">E Visa</a></li>
+                                        <li><a href="importantdates.html">Important Dates</a></li>
                                     </ul>
                                 </li>
-                                <li class="current dropdown"><a href="blog-sidebar.html">Blog</a>
-                                    <ul>
-                                        <li><a href="blog-sidebar.html">Blog With Sidebar</a></li>
-                                        <li><a href="blog-grid.html">Blog Grid</a></li>
-                                        <li><a href="blog-single.html">Blog Single</a></li>
-                                        <li><a href="error-page.html">404 Error</a></li>
-                                    </ul>
-                                </li>
-                               <li><a href="schedule.html">Schedule</a></li>
                             </ul>
                         </div>
                     </nav>
@@ -103,28 +102,9 @@
 
                     <!-- Outer box -->
                     <div class="outer-box">
-                        <!--Search Box-->
-                        <!-- <div class="search-box-outer">
-                            <div class="dropdown">
-                                <button class="search-box-btn dropdown-toggle" type="button" id="dropdownMenu3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="flaticon-search"></span></button>
-                                <ul class="dropdown-menu pull-right search-panel" aria-labelledby="dropdownMenu3">
-                                    <li class="panel-outer">
-                                        <div class="form-container">
-                                            <form method="post" action="index.html">
-                                                <div class="form-group">
-                                                    <input type="search" name="field-name" value="" placeholder="Search Here" required="">
-                                                    <button type="submit" class="search-btn"><span class="fa fa-search"></span></button>
-                                                </div>
-                                            </form>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div> -->
-
                         <!-- Button Box -->
                         <div class="btn-box">
-                            <a href="buy-ticket.html" class="theme-btn btn-style-one"><span class="btn-title">Get Tickets</span></a>
+                            <a target="__blank" href="https://easychair.org/conferences/?conf=ssic2021" class="theme-btn btn-style-one" ><span class="btn-title">Submit Online</span></a>
                         </div>
                     </div>
                 </div>
@@ -138,9 +118,12 @@
 
             <!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
             <nav class="menu-box">
-                <div class="nav-logo"><a href="index.html"><img src="images/logo-2.png" alt="" title=""></a></div>
+                <div class="nav-logo"><a href="index.html"><img src="images/logo_image.png" alt="" title=""></a></div>
 
                 <ul class="navigation clearfix"><!--Keep This Empty / Menu will come through Javascript--></ul>
+                <div class="btn-box" style="margin: 15px;">
+                    <a target="__blank" href="https://easychair.org/conferences/?conf=ssic2021" class="theme-btn btn-style-one" ><span class="btn-title">Submit Online</span></a>
+                </div>
             </nav>
         </div><!-- End Mobile Menu -->
     </header>
