--- a/about-us.html
+++ b/about-us.html
@@ -75,7 +75,7 @@
     <span class="header-span"></span>
 
     <!-- Main Header-->
-    <header class="main-header header-style-two">
+    <header class="main-header header-style-two" style="background: #fff;">
         <div class="main-box">
             <div class="auto-container clearfix">
                 <div class="logo-box" id="logo">
@@ -97,7 +97,9 @@
 
                         <div class="collapse navbar-collapse clearfix" id="navbarSupportedContent">
                             <ul class="navigation clearfix">
-                            <li class="dropdown"><a href="ssic.html">About</a>
+
+
+                                <li class="dropdown"><a href="ssic.html">About</a>
                                     <ul>
                                         <li><a href="ssic.html">SSIC 2017</a></li>
                                         <li><a href="ssic2019.html">SSIC 2019</a></li>
@@ -125,6 +127,8 @@
                                 <li class="dropdown"><a href="schedule.html">Author Info.</a>
                                     <ul style="width: 300px;">
                                         <li><a href="coming-soon.html">Registration</a></li>
+                                        <li><a href="guidelines.html">Author's Guidelines</a></li>
+                                        <li><a href="https://easychair.org/account/signin?l=3D11LA89AsL306UnmLGQUt#" target="_blank">Submit Manuscripts</a></li>
                                         <li><a href="coming-soon.html">Banking</a></li>
                                         <li><a href="coming-soon.html">Travel and Accommodation</a></li>
                                         <li><a href="coming-soon.html">E Visa</a></li>
