--- a/evisa.html
+++ b/evisa.html
@@ -75,11 +75,11 @@
     <span class="header-span"></span>
 
     <!-- Main Header-->
-    <header class="main-header header-style-two">
+    <header class="main-header header-style-two" style="background: #fff;">
         <div class="main-box">
             <div class="auto-container clearfix">
                 <div class="logo-box" id="logo">
-                    <div class="logo"><a style="color:blue" href="index.html"><img src="images/logo_image.png" alt="" title=""></a></div>
+                    <div class="logo"><a href="index.html"><img src="images/logo_image.png" alt="" title=""></a></div>
                 </div>
 
                 <!--Nav Box-->
@@ -99,37 +99,39 @@
                             <ul class="navigation clearfix">
 
 
-                                <li class="dropdown"><a style="color:blue" href="ssic.html">About</a>
+                                <li class="dropdown"><a href="ssic.html">About</a>
                                     <ul>
-                                        <li><a style="color:blue" href="ssic.html">SSIC 2017</a></li>
-                                        <li><a style="color:blue" href="ssic2019.html">SSIC 2019</a></li>
-                                        <li><a style="color:blue" href="https://jaipur.manipal.edu/">About Manipal</a></li>
-                                        <li><a style="color:blue" href="about-jaipur.html">About Jaipur</a></li>
-                                        <li><a style="color:blue" href="about-us.html">About Us</a></li>
+                                        <li><a href="ssic.html">SSIC 2017</a></li>
+                                        <li><a href="ssic2019.html">SSIC 2019</a></li>
+                                        <li><a href="https://jaipur.manipal.edu/">About Manipal</a></li>
+                                        <li><a href="about-jaipur.html">About Jaipur</a></li>
+                                        <li><a href="about-us.html">About Us</a></li>
                                     </ul>
                                 </li>
-                                <li class="dropdown"><a style="color:blue" href="papers.html">Call For</a>
+                                <li class="dropdown"><a href="papers.html">Call For</a>
                                     <ul>
-                                        <li><a style="color:blue" href="papers.html">Papers</a></li>
-                                        <li><a style="color:blue" href="ssic2019.html">Sessions</a></li>
-                                        <li><a style="color:blue" href="https://jaipur.manipal.edu/">Workshop</a></li>
-                                        <li><a style="color:blue" href="about-jaipur.html">Tutorial</a></li>
+                                        <li><a href="papers.html">Papers</a></li>
+                                        <li><a href="ssic2019.html">Sessions</a></li>
+                                        <li><a href="https://jaipur.manipal.edu/">Workshop</a></li>
+                                        <li><a href="about-jaipur.html">Tutorial</a></li>
                                     </ul>
                                 </li>
-                                <li class="dropdown"><a style="color:blue" href="organizers.html">Committees</a>
+                                <li class="dropdown"><a href="organizers.html">Committees</a>
                                     <ul>
-                                        <li><a style="color:blue" href="organizers.html">Organisers</a></li>
-                                        <li><a style="color:blue" href="advisory.html">Advisory Committee</a></li>
+                                        <li><a href="organizers.html">Organisers</a></li>
+                                        <li><a href="advisory.html">Advisory Committee</a></li>
                                         <li><a href="tpc.html">Techincal Program Committee</a></li>
                                     </ul>
                                 </li>
                                 <li ><a class="current" href="speakers.html">Speakers</a></li>
-                                <li class="dropdown"><a style="color:blue" href="schedule.html">Author Info.</a>
+                                <li class="dropdown"><a href="schedule.html">Author Info.</a>
                                     <ul style="width: 300px;">
-                                        <li><a style="color:blue" href="coming-soon.html">Registration</a></li>
-                                        <li><a style="color:blue" href="coming-soon.html">Banking</a></li>
-                                        <li><a style="color:blue" href="coming-soon.html">Travel and Accommodation</a></li>
-                                        <li><a style="color:blue" href="coming-soon.html">E Visa</a></li>
+                                        <li><a href="coming-soon.html">Registration</a></li>
+                                        <li><a href="guidelines.html">Author's Guidelines</a></li>
+                                        <li><a href="https://easychair.org/account/signin?l=3D11LA89AsL306UnmLGQUt#" target="_blank">Submit Manuscripts</a></li>
+                                        <li><a href="coming-soon.html">Banking</a></li>
+                                        <li><a href="coming-soon.html">Travel and Accommodation</a></li>
+                                        <li><a href="coming-soon.html">E Visa</a></li>
                                         <li><a href="importantdates.html">Important Dates</a></li>
                                     </ul>
                                 </li>
@@ -156,7 +158,7 @@
 
             <!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
             <nav class="menu-box">
-                <div class="nav-logo"><a style="color:blue" href="index.html"><img src="images/logo_image.png" alt="" title=""></a></div>
+                <div class="nav-logo"><a href="index.html"><img src="images/logo_image.png" alt="" title=""></a></div>
 
                 <ul class="navigation clearfix"><!--Keep This Empty / Menu will come through Javascript--></ul>
                 <div class="btn-box" style="margin: 15px;">
