--- a/index.html
+++ b/index.html
@@ -134,6 +134,8 @@
                                <li class="dropdown"><a href="schedule.html">Author Info.</a>
                                     <ul style="width: 300px;">
                                         <li><a href="coming-soon.html">Registration</a></li>
+                                        <li><a href="guidelines.html">Author's Guidelines</a></li>
+                                        <li><a href="https://easychair.org/account/signin?l=3D11LA89AsL306UnmLGQUt#" target="_blank">Submit Manuscripts</a></li>
                                         <li><a href="coming-soon.html">Banking</a></li>
                                         <li><a href="coming-soon.html">Travel and Accommodation</a></li>
                                         <li><a href="coming-soon.html">E Visa</a></li>
